# ACME_Robotics_Path_Planner

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  readme.md
.github/workflows/: build_and_coveralls.yml
app/: CMakeLists.txt  arm.cpp  main.cpp  path_planner.cpp  test_yaml.cpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/app/: arm.cpp.func-sort-c.html  arm.cpp.func.html  arm.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  path_planner.cpp.func-sort-c.html  path_planner.cpp.func.html  path_planner.cpp.gcov.html
coverage/include/: arm.hpp.func-sort-c.html  arm.hpp.func.html  arm.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  path_planner.hpp.func-sort-c.html  path_planner.hpp.func.html  path_planner.hpp.gcov.html
coverage/test/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html  test.cpp.func-sort-c.html  test.cpp.func.html  test.cpp.gcov.html
documents/html/: annotated.html  arm_8hpp.html  arm_8hpp__dep__incl.map  arm_8hpp__dep__incl.md5  arm_8hpp__incl.map  arm_8hpp__incl.md5  arm_8hpp_source.html  classArm-members.html  classArm.html  classArm2D-members.html  classArm2D.html  classArm2D__coll__graph.map  classArm2D__inherit__graph.md5  classArm__inherit__graph.map  classArm__inherit__graph.md5  classPathPlanner-members.html  classPathPlanner.html  classes.html  files.html  (+16 more)
include/: arm.hpp  path_planner.hpp  utils.hpp
scripts/: example_traj.yaml  visualize_arm.py
test/: CMakeLists.txt  test.cpp
(+40 files in other folders)
